# FB_Rust

./: .devenv.flake.nix  .gitignore  .~lock.E_Financial_report.xlsx#  .~lock.body_structure_test.xlsx#  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE-2.0  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  PROJECT_STRUCTURE.md  README.md  TESTFILES_CONSOLIDATION.md  about.hbs  about.toml  check_overwrite.xlsx  debug_sheet_output.xlsx  deny.toml  devbox.json  devenv.nix  fb-rust.cdx.json  flake.nix  kmw-fb-rust.cdx.json  layout_preservation_test.xlsx  prek.nix  prek.toml  test_zoom.xlsx  third-party-licenses.html
.cargo/: config.toml
.devenv/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3kv1ng3kd3vs4xpszn3kgqg1bgqp73y3-source  96p7i0hq1blppx94lnbhpsavj2xckzi9-source  (+5 more)
Test-Dateien/: .~lock.D_Finanzbericht_TEST_Batch.xlsx#  D_Finanzbericht_TEST_Batch.xlsx  D_Finanzbericht_TEST_CustomRows.xlsx  D_Finanzbericht_TEST_DE_Unprotected.xlsx  E_Financial_report_TEST_Batch.xlsx  E_Financial_report_TEST_EN_Protected.xlsx  F_Rapport_financier_TEST_Batch.xlsx  P_Relatorio_financeiro_TEST_Batch.xlsx  S_Informe_financiero_TEST_Batch.xlsx
benches/: report_generation.rs  update_readme.rs
examples/: benchmark.rs  benchmark_100_files.rs  benchmark_100_test_runs.rs  benchmark_100_test_runs_threaded.rs  benchmark_compare.rs  benchmark_row_vs_column_format.rs  benchmark_set_row_format.rs  benchmark_unprotect_large.rs  benchmark_unprotect_range.rs  check_overwrite.rs  generate_test_files.rs  profile.rs  read_footer_template.rs  run_all_and_copy.rs  test_all_fields.rs  test_body_structure.rs  test_dates.rs  test_mixed_categories.rs  test_multilang.rs  test_multilang_grouped.rs  test_page_breaks.rs  test_parallel_protection.rs  test_right_panel_data.rs  test_row_format.rs  test_sheet_protection.rs  test_unlock_perf.rs  test_workbook_protection.rs  test_wrong_cache.rs  test_zoom.rs  verify_password.rs  write_workbook.rs
nix/: dagger.nix  gui-support.nix  gui-test.nix  toolchain.nix
src/: config.rs  dynamic_report.rs  error.rs  formats.rs  language.rs  lib.rs  sheet_builder.rs  workbook.rs  workbook_protection.rs
tests/: ironcalc_api_validation.rs  serde_integration.rs  test_protection.rs
(+153 files in other folders)
