[package]
name = "kmw-fb-rust"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite of the KMW Finanzbericht exporter using rust_xlsxwriter"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]
name = "kmw_fb_rust"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
anyhow = "1.0"
once_cell = "1.19"
rust_xlsxwriter = "0.92.2"
thiserror = "2.0.17"
zip = "6.0.0"
quick-xml = "0.31"
sha2 = "0.10"
base64 = "0.21"
getrandom = "0.3"
byteorder = "1.4"
tempfile = "3"

[dev-dependencies]
rayon = "1.8"