[package]
name = "kmw-fb-rust"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite of the KMW Finanzbericht exporter using rust_xlsxwriter"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]
name = "kmw_fb_rust"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
anyhow = "1.0"
once_cell = "1.21"
rust_xlsxwriter = "0.94.0"
thiserror = "2.0.18"
zip = "8.1.0"
quick-xml = "0.39"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.4.1"
byteorder = "1.5"
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rayon = "1.11"
serde_json = "1"
sysinfo = "0.38"

[[bench]]
name = "report_generation"
harness = false

[[bench]]
name = "update_readme"
harness = false
