[package]
name = "fb-rust"
version = "0.5.0"
edition = "2021"
rust-version = "1.87"
description = "High-performance Excel financial report generator (XLSX) with formulas, formatting, and workbook protection"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["excel", "xlsx", "financial-report", "rust-xlsxwriter"]
categories = ["finance", "template-engine"]

[lib]
crate-type = ["rlib"]
name = "fb_rust"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
rust_xlsxwriter = "0.94.0"
zip = "8.1.0"
quick-xml = "0.39"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.4.1"
byteorder = "1.5"
tempfile = "3"
derive_builder = "0.20"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rayon = "1.11"
serde_json = "1"
sysinfo = "0.38"

[[bench]]
name = "report_generation"
harness = false

[[bench]]
name = "update_readme"
harness = false
